@@ -19,6 +19,9 @@
   17. The "sessions" archon command has been replaced with "list sessions".  On the bright side, all of the LIST [X] parms now have their own help entries.
   18. JavaScript embedded in Scriptable scripts can now access all the Scriptable commands and functions from within JavaScript.  See the Scriptable Guide.
   19. CoffeeMud now has a working computer console, working power source for the computer, and working example software.  New command: TYPE for interacting.
+  20. Bards songs/dances/plays now show an ambiance during performances.
+  21. MUDGrinder Factions Manager now allows pre-loaded faction toggling.
+  
 # Build 5.7.10 Release 2/17/2013 (* DB CHANGE!) (** Thanks to TGMUD for publishing their changelogs!!!)
    0. Database Schema Updated! Run DBUpgrade, OR create table CMCHCL (see appropriate schema file), then:
    INSERT INTO CMCHCL VALUES (SELECT USERID, CMCLAN, CMCLRO from CMCHAR where CMCLAN != ''); // lastly:
